<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    android:background="@drawable/gradient"
    tools:context=".LogInActivity">


    <TextView
        android:id="@+id/blogger"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_margin="30dp"
        android:layout_alignParentTop="true"
        android:fontFamily="sans-serif-thin"
        android:text="@string/blogger"
        android:textSize="50sp"
        android:gravity="center_horizontal"/>

    <EditText
        android:id="@+id/email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:textColorLink="@android:color/holo_green_dark"
        android:background="@drawable/editext"
        android:padding="15dp"
        android:layout_below="@id/blogger"/>

    <EditText
        android:id="@+id/password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:textColorLink="@android:color/holo_green_dark"
        android:background="@drawable/editext"
        android:padding="15dp"
        android:layout_below="@id/email"/>

    <Button
        android:id="@+id/login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/password"
        android:layout_marginStart="5dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="5dp"
        android:layout_marginBottom="5dp"
        android:background="#FF09BC00"
        android:text="@string/log_in"
        android:textColor="@android:color/background_light" />

    <TextView
        android:id="@+id/or"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/login"
        android:layout_marginTop="13dp"
        android:layout_marginBottom="10dp"
        android:gravity="center_horizontal"
        android:text="@string/or"
        android:textColor="#ffffffff"
        android:textSize="20sp" />


    <Button
        android:id="@+id/google"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:background="@android:color/holo_red_light"
        android:padding="10dp"
        android:text="@string/continue_with_google"
        android:textColor="@color/cardview_light_background"
        android:layout_below="@+id/or"
        />

    <Button
        android:id="@+id/fb"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:background="@color/colorPrimaryDark"
        android:padding="10dp"
        android:text="@string/continue_with_facebook"
        android:textColor="@color/cardview_light_background"
        android:layout_below="@id/google"/>
    <Button
        android:id="@+id/signup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:background="@null"
        android:text="@string/don_t_have_a_account_sign_up"
        android:textColor="@android:color/background_light"
        android:layout_alignParentBottom="true"
        />


</RelativeLayout>