<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    android:background="@drawable/gradient"
    tools:context=".SignUpActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_margin="30dp"
        android:fontFamily="sans-serif-thin"
        android:text="@string/get_started"
        android:textSize="50sp" />
    <EditText
        android:id="@+id/email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:textColorLink="@android:color/holo_green_dark"
        android:background="@drawable/editext"
        android:padding="15dp"
        android:autofillHints="" />

    <EditText
        android:id="@+id/password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:textColorLink="@android:color/holo_green_dark"
        android:background="@drawable/editext"
        android:padding="15dp"
        android:autofillHints="" />

    <Button
        android:id="@+id/signup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:background="@drawable/button"
        android:text="@string/sign_up"
        android:textColor="@android:color/background_light" />

</LinearLayout>