<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="16dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <ImageView
            android:id="@+id/post_image"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:src="@drawable/image"
            android:contentDescription="@string/uploaded_images" />
        <TextView
            android:id="@+id/post_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/post_title"

            android:textStyle="bold"
            android:textAppearance="@style/Base.TextAppearance.AppCompat.Large"/>
        <TextView
            android:id="@+id/post_desc"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/post_description"

            android:textStyle="bold"/>

    </LinearLayout>
</android.support.v7.widget.CardView>