<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".PostActivity">

    <ImageButton
        android:id="@+id/imageButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorAccent"
        android:scaleType="centerCrop"
        app:srcCompat="@drawable/image"
        android:layout_margin="5dp"
        android:layout_alignParentTop="true"
        android:contentDescription="@string/selected_image" />

    <EditText
        android:id="@+id/title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"
        android:hint="@string/title"
        android:background="@drawable/editext"
        android:padding="16dp"
        android:layout_margin="5dp"
        android:layout_below="@+id/imageButton"
        android:autofillHints="" />

    <EditText
        android:id="@+id/desc"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:ems="10"
        android:inputType="textMultiLine"
        android:hint="@string/description"
        android:background="@drawable/editext"
        android:layout_below="@id/title"
        android:layout_above="@id/post"
        android:gravity="start"
        android:padding="16dp"
        android:layout_margin="5dp"
        android:autofillHints="" />

    <Button
        android:id="@+id/post"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:padding="20dp"
        android:background="@color/colorPrimary"
        android:text="@string/post_it"
        android:textColor="#ffffffff"
        android:textSize="16sp"
        android:layout_alignParentBottom="true"
        android:layout_gravity="bottom"/>

</RelativeLayout>